fix badge position on mobile app

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -902,6 +902,10 @@ span.deleteicon input {
     width: 174px;
     float: right;
 }
+.mb-minimum-container2 {
+    width: 134px;
+    float: right;
+}
 .medium-container {
     width: 264px;
     float: right;
